--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,11 @@ upload-dir = docs/
 
 [bdist_wheel]
 universal=1
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = prang/_version.py
+versionfile_build = prang/_version.py
+tag_prefix =
+parentdir_prefix = prang-
