Reached 4.20 of the specification

--- a/tox.ini
+++ b/tox.ini
@@ -8,12 +8,12 @@ envlist = py27, py34, pypy, pypy3
 
 [testenv]
 commands =
-    py.test tests
+    py.test -x tests
 deps =
     pytest
 [testenv:py34]
 commands =
-    py.test tests
+    py.test -x tests
     python -m doctest readme.adoc
     python -m doctest docs/index.adoc
     flake8 prang
