--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py34, pypy, pypy3
+envlist = py34, pypy3
 
 [testenv]
 commands =
